--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
   max-width: 1000px;
   overflow: hidden;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  line-height: 3em;
+  line-height: 1.75em;
 }
 .recipe-image {
   display: flex;
@@ -28,7 +28,7 @@ body {
   padding: 20px;
 }
 h1 {
-  font-size: 45px;
+  font-size: 40px;
 }
 h2 {
   color: hsl(14, 45%, 36%);
@@ -82,5 +82,9 @@ td {
   }
   .content {
     padding: 15px;
+  }
+  h1 {
+    font-size: xx-large;
+    line-height: 1em;
   }
 }
